  * Do not make /var/log/mailman world-readable, because it can contain
    a bit of semi-private information. Thanks Alexander Gerasiov.
    (Closes: #450927)
  * After logrotate, call 'mailmanctl reopen' instead of sending SIGHUP
    since that is the supported way of rotating logs (Closes: #424620).
  * Fix pidfile location in mailman.init, thanks Peter Rabbitson
    (Closes: #439325).

 -- Thijs Kinkhorst <thijs@debian.org>  Sat,  1 Dec 2007 17:23:53 +0100

mailman (1:2.1.9-8) unstable; urgency=low

  [ Thijs Kinkhorst ]
  * Added Portuguese debconf translation by Miguel Figueiredo
    (Closes: #414365).
  * Make sure Mailman can be properly purged (Closes: #421676).
  * Remove obsolete upgrading code.
  * Do not break upgrades in case python is temporarily unavailable
    (Closes: #419563).

  [ Lionel Elie Mamane ]
  * Avoid implicit-sort-on-load of indexes being converted to Unicode
    (hopefully really closes: #412142 now)

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 11 Jun 2007 20:48:11 +0200

mailman (1:2.1.9-7) unstable; urgency=low

  * Upgrade subject and author indexes of _all_ archiving volumes to
    Unicode strings. (completely closes: #412142)

 -- Lionel Elie Mamane <lmamane@debian.org>  Wed, 28 Feb 2007 21:59:36 +0100

mailman (1:2.1.9-6) unstable; urgency=medium

  [ Lionel Elie Mamane ]
  * Allow people that have list as a supplementary group to create new
    mailing lists.  (see bug#309339)
  * Upgrade subject and author indexes of current archiving volume to
    Unicode strings; possible slight data loss (non-ASCII characters
    transcoded wrongly) (closes: #412142)
  * Correct path to Mailman private modules dir in dh_pysupport invocation
    (the absolute symlinks won't work in the building area), and add
    private pythonlib dir.

  [ Thijs Kinkhorst ]
  * Fix path-typo in apache.conf dedicated virtual host example,
    thanks Alberto Furia (Closes: #409180).
